cabal-version:       3.0
name:                micro-servant
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/AbsoluteNikola/micro-servant#readme
license:             MIT
license-file:        LICENSE
author:              Nikolay Rul
maintainer:          nikolayr2001@gmail.com
copyright:           Nikolay Rulev
category:            Web
build-type:          Simple
extra-source-files:  README.md

common common-options
  default-language: Haskell2010

  mixins:
      base hiding (Prelude)
    , relude (Relude as Prelude)

  build-depends:
      base >= 4.7 && < 5
    , relude ^>= 1.0.0.0
    , bytestring ^>= 0.10
    , mtl ^>= 2.2
    , stm >= 2.4 && < 2.6
    , text ^>= 1.2
    , transformers ^>= 0.5
    , unordered-containers >= 0.2.7 && < 0.3

  default-extensions:
  ghc-options: -Weverything -Wno-safe -Wno-unused-packages -Wno-missing-safe-haskell-mode -Wno-missing-import-lists -Wno-missing-local-signatures -Wno-implicit-prelude

library
  import: common-options
  hs-source-dirs: src
  exposed-modules:
    Lib

executable micro-servant
  import: common-options
  hs-source-dirs:      exe
  main-is:             Main.hs
  build-depends:       
    base >= 4.7 && < 5
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N
  
tests:
  micro-servant-test:
  import: common-options
  main:                Spec.hs
  source-dirs:         test
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N
  dependencies:
    micro-servant
